--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: Dhurjati;
-  src: url(../Fonts/Dhurjati-Regular.ttf);
+  src: url(./Fonts/Dhurjati-Regular.ttf);
 }
 @font-face {
   font-family: Doppio One;
-  src: url(../Fonts/DoppioOne-Regular.ttf);
+  src: url(./Fonts/DoppioOne-Regular.ttf);
 }
 @font-face {
   font-family: Quicksand;
-  src: url(../Fonts/Quicksand-VariableFont_wght.ttf);
+  src: url(./Fonts/Quicksand-VariableFont_wght.ttf);
 }
 @font-face {
   font-family: Montserrat;
@@ -18,12 +18,7 @@ html {
   font-size: 10px;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.elem1__text > p, .description__square > p {
+body, .elem1__text > p, .description__square > p {
   margin: 0;
   padding: 0;
 }
@@ -38,22 +33,13 @@ body {
   justify-content: space-between;
 }
 .main .main__nav .nav__elem1 {
+  text-decoration: none;
   display: flex;
   align-items: center;
 }
-.main .main__nav .nav__elem1 .elem1__imgContainer {
-  display: inline-block;
-  height: 100%;
-}
-.main .main__nav .nav__elem1 .elem1__imgContainer .elem1__img {
-  width: 105%;
-  height: 105%;
-}
 .main .main__nav .nav__elem1 .elem1__text .elem1__text1 {
   font-family: "Quicksand";
-  font-style: normal;
   font-weight: 700;
-  font-size: 1.6rem;
   font-size: 2rem;
   line-height: 20px;
   color: #0897AB;
@@ -63,9 +49,7 @@ body {
 }
 .main .main__nav .nav__elem1 .elem1__text .elem1__text2 {
   font-family: "Quicksand";
-  font-style: normal;
   font-weight: 700;
-  font-size: 1.6rem;
   font-size: 2rem;
   line-height: 20px;
   color: #FFFFFF;
@@ -78,27 +62,19 @@ body {
   gap: 53px;
 }
 .main .main__nav .nav__elem2 .elem2__searchContainer {
-  background: rgba(40, 40, 52, 0.01);
-  border: 2px solid #0897AB;
-  box-shadow: 0px 0px 38px rgba(0, 0, 0, 0.52);
-  border-radius: 23px;
-  border-radius: 75px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-right: 176px;
-  padding-right: 225px;
-  display: flex;
-  justify-content: flex-start;
   background: url(./img/main/magnifier.svg) 29px 18px no-repeat;
 }
 .main .main__nav .nav__elem2 .elem2__searchContainer .elem2__search {
-  margin-left: 64px;
+  padding: 15px 0 15px 65px;
+  width: 250px;
   font-family: "Doppio One";
-  font-style: normal;
   font-weight: 400;
   font-size: 1.6rem;
-  line-height: 20px;
   color: rgba(255, 255, 255, 0.58);
+  background: rgba(40, 40, 52, 0.01);
+  border: 2px solid #0897AB;
+  box-shadow: 0px 0px 38px rgba(0, 0, 0, 0.52);
+  border-radius: 75px;
 }
 .main .main__nav .nav__elem2 .elem2__bin {
   background: url(./img/main/bin.svg) no-repeat;
@@ -109,10 +85,8 @@ body {
 }
 .main .main__nav .nav__elem2 .elem2__bin .elem2__text {
   font-family: "Roboto";
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 19px;
   color: #FFFFFF;
   background-color: #0897AB;
   border-radius: 100%;
@@ -123,9 +97,8 @@ body {
   left: 25px;
 }
 .main .main__description {
-  padding: 100px 67px 10% 200px;
+  padding: 100px 67px 10% 10%;
   margin: 0 680px 0 0;
-  padding-left: 10%;
   position: relative;
   z-index: 0;
   bottom: 100px;
@@ -144,17 +117,13 @@ body {
 }
 .main .main__description .description__square .description__h1 {
   font-family: "Doppio One";
-  font-style: normal;
   font-weight: 400;
   font-size: 4.8rem;
-  line-height: 60px;
   color: #FFFFFF;
-  width: 500px;
 }
 .main .main__description .description__square .description__text {
   width: 650px;
   font-family: "Doppio One";
-  font-style: normal;
   font-weight: 400;
   font-size: 2rem;
   line-height: 157%;
@@ -167,13 +136,13 @@ body {
 }
 .main .main__description .description__square .description__button {
   font-family: "Doppio One";
-  font-style: normal;
   font-weight: 400;
   font-size: 2rem;
-  line-height: 25px;
   color: #FFFFFF;
   padding: 20px 62px;
-  background: url(./img/main/Subtract.svg) 0 0/100% 100% no-repeat;
+  -webkit-clip-path: polygon(15% 0%, 95% 0, 100% 20%, 100% 85%, 100% 100%, 5% 100%, 0 80%, 0 0);
+          clip-path: polygon(15% 0%, 95% 0, 100% 20%, 100% 85%, 100% 100%, 5% 100%, 0 80%, 0 0);
+  background-color: #0897AB;
 }
 .main .main__description .description__square .description__link {
   text-decoration: none;
@@ -193,7 +162,6 @@ body {
 
 .HU-1-3__leftpanel {
   position: relative;
-  width: 49vw;
   width: 650px;
   z-index: 0;
 }
@@ -201,14 +169,15 @@ body {
 .HU-1-3__leftpanel .leftpanel__img1 {
   width: 125px;
   position: absolute;
-  left: 35%;
-  top: 20%;
+  left: 210px;
+  height: 403px;
+  top: 108.5px;
 }
 
 .HU-1-3__leftpanel .leftpanel__img2 {
   width: 125px;
   position: absolute;
-  left: 53.847%;
+  left: 333.4px;
   height: 403px;
   top: 109px;
 }
@@ -232,12 +201,9 @@ body {
 .HU-1-3__leftpanel h1 {
   font-family: "Dhurjati", sans-serif;
   position: absolute;
-  left: 27%;
-  top: 7.5%;
   top: 1%;
   left: 22%;
   color: white;
-  font-size: 5.6rem;
   font-size: 9.6rem;
   font-weight: normal;
   line-height: 16rem;
@@ -261,7 +227,6 @@ body {
 
 .HU-1-3__rightpanel h3 {
   font-family: "Doppio One";
-  font-size: 2.4rem;
   font-size: 3.2rem;
   line-height: 4rem;
   color: white;
@@ -271,7 +236,6 @@ body {
 .HU-1-3__rightpanel span {
   font-family: "Doppio One";
   color: #D8A4B6;
-  font-size: 3rem;
   font-size: 3.2rem;
 }
 
@@ -495,4 +459,107 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.footer {
+  padding-top: 30px;
+  background: linear-gradient(112deg, rgb(6, 7, 17), rgb(6, 76, 89));
+}
+.footer .footer__lists {
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  margin-bottom: 15px;
+}
+.footer .footer__lists .footer__list {
+  font-family: "Doppio One";
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 237.5%;
+  color: #9d9d9d;
+}
+.footer .footer__lists .footer__list ul {
+  list-style: none;
+}
+.footer .footer__lists .footer__list ul li:first-child {
+  color: white;
+}
+.footer .footer__bottom {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 75px;
+  border-top: 1px solid #55585c;
+  padding: 10px 0;
+}
+.footer .footer__bottom .footer__copyright {
+  font-family: "Doppio One";
+  font-weight: 400;
+  font-size: 15px;
+  color: #55585c;
+}
+.footer .footer__bottom .footer__policy {
+  font-family: "Doppio One";
+  font-weight: 400;
+  font-size: 15px;
+  color: #55585c;
+}
+
+.HU-2-1 .HU-2-1__container {
+  padding: 2.6rem 9.7rem;
+  display: flex;
+  justify-content: space-between;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item1 {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item1 .HU-2-1__logoText {
+  padding-left: 1rem;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item1 .HU-2-1__logoText .HU-2-1__logoText1 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
+  color: #0897AB;
+  margin: 0;
+  text-transform: uppercase;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item1 .HU-2-1__logoText .HU-2-1__logoText2 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
+  color: #FFFFFF;
+  margin: 0;
+  text-transform: uppercase;
+  padding-left: 3rem;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item2 {
+  display: flex;
+  align-items: center;
+  gap: 5.3rem;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item2 .HU-2-1__searchContainer {
+  background: url(./img/magnifier.svg) 2.9rem 1.8rem no-repeat;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item2 .HU-2-1__searchContainer .HU-2-1__search {
+  padding: 1.5rem 8rem 1.5rem 6.5rem;
+  font-family: "Doppio One";
+  font-weight: 400;
+  font-size: 1.6rem;
+  color: rgb(40, 40, 52);
+  background: rgba(40, 40, 52, 0.01);
+  border: 0.2rem solid #FAFAFA;
+  box-shadow: 3.8rem rgba(0, 0, 0, 0.52);
+  border-radius: 7.5rem;
+  outline: none;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item2 .HU-2-1__sortContainer {
+  background-color: #009ED6;
+  padding: 2rem;
+  border-radius: 5rem;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item2 .HU-2-1__bin {
+  text-align: center;
+  position: relative;
 }/*# sourceMappingURL=style.css.map */
