--- a/style.css
+++ b/style.css
@@ -523,13 +523,10 @@ body, .elem1__text > p, .description__square > p {
   box-shadow: 0.5rem 0.5rem 1rem 1rem rgba(0, 0, 0, 0.2);
 }
 .HU-2-5__img {
-  width: 50%;
-  vertical-align: middle;
+  display: flex;
 }
 .HU-2-5__img img {
-  width: 90%;
-  margin-left: 5%;
-  margin-top: 10%;
+  padding: 6rem 7rem 6rem 3.4rem;
 }
 .HU-2-5__rightpanel {
   width: 50%;
