--- a/style.scss
+++ b/style.scss
@@ -515,12 +515,9 @@ display: flex;
 height: 45rem;
 box-shadow: 0.5rem 0.5rem 1rem 1rem rgba(0,0,0,0.2);
 &__img{
-  width: 50%;
-  vertical-align: middle;
+ display: flex;
   img{
-    width:90%;
-    margin-left: 5%;
-    margin-top: 10%;
+ padding: 6rem 7rem 6rem 3.4rem;
   }
 }
 &__rightpanel{
