--- a/style.css
+++ b/style.css
@@ -532,7 +532,7 @@ body, .elem1__text > p, .description__square > p {
 }
 .HU-2-5__rightpanel h2 {
   font-family: "Doppio One", sans-serif;
-  font-size: 3rem;
+  font-size: 3.6rem;
   font-weight: normal;
   color: white;
   font-weight: 400;
@@ -540,14 +540,14 @@ body, .elem1__text > p, .description__square > p {
 }
 .HU-2-5__rightpanel h3 {
   font-family: "Doppio One";
-  font-size: 2.6rem;
-  line-height: 3rem;
+  font-size: 3.2rem;
+  line-height: 4rem;
   color: white;
   font-weight: normal;
 }
 .HU-2-5__rightpanel p {
   font-family: "Doppio One";
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.57);
   width: 90%;
@@ -555,13 +555,14 @@ body, .elem1__text > p, .description__square > p {
 .HU-2-5__rightpanel span {
   font-family: "Doppio One";
   color: #0897AB;
-  font-size: 3rem;
+  font-size: 4rem;
 }
 
 .HU-2-5 .rightpanel__link {
   position: relative;
   display: flex;
   flex-direction: column;
+  margin-bottom: 7rem;
 }
 .HU-2-5 .rightpanel__link a {
   font-family: "Dhurjati";
