--- a/style.scss
+++ b/style.scss
@@ -524,7 +524,7 @@ box-shadow: 0.5rem 0.5rem 1rem 1rem rgba(0,0,0,0.2);
   h2 {
 
     font-family: 'Doppio One', sans-serif;
-    font-size: 3rem;
+    font-size: 3.6rem;
     font-weight: normal;
     color: white;
     font-weight: 400;
@@ -532,14 +532,14 @@ box-shadow: 0.5rem 0.5rem 1rem 1rem rgba(0,0,0,0.2);
   }
   h3 {
     font-family: "Doppio One";
-    font-size: 2.6rem;
-    line-height: 3rem;
+    font-size: 3.2rem;
+    line-height: 4rem;
     color: white;
     font-weight: normal;
     }
     p {
       font-family: 'Doppio One';
-      font-size: 1.6rem;
+      font-size: 2rem;
       font-weight: 400;
       color: rgba(255, 255, 255, 0.57);
       width: 90%;
@@ -547,7 +547,7 @@ box-shadow: 0.5rem 0.5rem 1rem 1rem rgba(0,0,0,0.2);
       span {
         font-family: "Doppio One";
         color: #0897AB; 
-        font-size: 3rem;
+        font-size: 4rem;
         }
 }
 }
@@ -555,6 +555,7 @@ box-shadow: 0.5rem 0.5rem 1rem 1rem rgba(0,0,0,0.2);
 position: relative;
 display: flex;
 flex-direction: column;
+margin-bottom: 7rem;
 a {
   font-family: 'Dhurjati';
   font-weight: 400;
