--- a/style.scss
+++ b/style.scss
@@ -512,7 +512,7 @@ body, .elem1__text > p, .description__square > p{
 }
 .HU-2-5{
 display: flex;
-box-shadow: 0.5rem 0.5rem 1rem 1rem rgba(0,0,0,0.2);
+box-shadow: 1rem 1rem 1.5rem 1rem rgba(0,0,0,0.15) , -1rem -1rem 1.5rem 1rem rgba(0,0,0,0.15);
 &__img{
  display: flex;
   img{
