--- a/style.css
+++ b/style.css
@@ -509,7 +509,7 @@ body {
 }
 .HU-2-4__carpets{
   margin-top: 5.5rem;
-  width: 42.6rem;
+  width: 47rem;
   padding: 6.5rem 2.2rem 6.5rem;
   box-shadow: 0 0 0.5rem 0.5rem #00000040;
 }
@@ -538,9 +538,10 @@ body {
   text-align: right;
 }
 .HU-2-4__carpets img{
-  width: 368px;
+  width: 36.8rem;
   margin-left: 2rem;
   margin-top: 5rem;
+  margin-bottom: 9rem;
 }
 .HU-2-4__lorem{
   font-weight: 400;
@@ -559,11 +560,14 @@ body {
   text-decoration: none;
 }
 .HU-2-2{
-  margin-left: 13rem;
+  display: flex;
+  justify-content: center;
+  /* margin-left: 13rem; */
   height: 16rem;
+  /* margin-top: 2.2rem; */
+  margin: 2.2rem auto 0;
 }
 .HU-2-2__ul{
-  display: inline-block;
   list-style: none;
   padding: 0;
   font-family: "Quicksand";
@@ -573,7 +577,7 @@ body {
   width: 17rem;
   margin-right: 2.4rem;
 }
-.HU-2-2__ul p{
+.HU-2-2__ul label{
   margin: 0 0 1rem;
   border-bottom: 1px solid rgba(255, 255, 255, 0.21);
 }
@@ -594,7 +598,7 @@ body {
   width: 85%;
   justify-content: space-between;
 }
-.li__active p, .li__unactive p{
+.li__active label, .li__unactive label{
   width: 11rem;
 }
 .li__active{
@@ -608,14 +612,6 @@ body {
   width: 1.7rem;
   height: 1.7rem;
   border-radius: 0.3rem;
-}
-.check__blue{
-  display: flex;
-  width: 1.7rem;
-  height: 1.7rem;
-  border-radius: 0.3rem;
-  background-color: #0897AB;
-  justify-content: center;
 }
 .check__img{
   text-align: center;
@@ -632,7 +628,7 @@ body {
   margin-right: 2.4rem;
   width: 7rem;
 }
-.HU-2-2__color p{
+.HU-2-2__color label{
   margin: 0 0 1rem;
   border-bottom: 1px solid rgba(255, 255, 255, 0.21);
 }
@@ -644,7 +640,7 @@ body {
   color: white;
   border-bottom: 1px solid rgba(255, 255, 255, 0.21);
 }
-.color__first p{
+.color__first label{
   border-bottom: none !important;
   margin: 0;
 }
@@ -659,35 +655,25 @@ body {
   justify-content: space-between;
   color: rgba(255, 255, 255, 0.21);
 }
-.check__red{
-  display: flex;
-  width: 1.7rem;
-  height: 1.7rem;
-  border-radius: 0.3rem;
-  background-color: red;
-  justify-content: center;
-}
-.check__black{
-  display: flex;
-  width: 1.7rem;
-  height: 1.7rem;
-  border-radius: 0.3rem;
-  background-color: black;
-  justify-content: center;
-}
-.check__white{
-  display: flex;
-  width: 1.7rem !important;
-  height: 1.7rem;
-  border-radius: 0.3rem;
-  background-color: white;
-  justify-content: center;
-}
-.color__activ p, .color__unactiv p{
+.color__activ label, .color__unactiv label{
   width: 4rem;
 }
 .color__first img{
   height: 2.5rem;
   width: 1.5rem;
   vertical-align: sub;
+}
+.form-check-input{
+  width: 1.7rem !important;
+  height: 1.7rem !important;
+  margin-top: 0;
+}
+.color__first p{
+  margin: 0;
+}
+.li__first p{
+  border-bottom: 1px solid rgba(255, 255, 255, 0.21);
+}
+.bottom label{
+  border-bottom: none !important;
 }
