--- a/style.scss
+++ b/style.scss
@@ -193,7 +193,7 @@ body, .elem1__text > p, .description__square > p{
           align-items: center;
           gap: 5.3rem;
           .HU-2-1__searchContainer{
-               background: url(./img/magnifier.svg) 2.9rem 1.8rem no-repeat;
+               background: url(./img/HU-2-1/magnifier.svg) 2.9rem 1.8rem no-repeat;
               .HU-2-1__search{
                   padding: 1.5rem 8rem 1.5rem 6.5rem;
                   font-family: 'Doppio One';
