--- a/style2.css
+++ b/style2.css
@@ -1,26 +1,8 @@
 .link__img{
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    align-items: center;
-    justify-content: center;
+    list-style-type: none;
  background: linear-gradient(rgb(13,14,38),rgb(8,64,82));
 }
-.razer__img{
-    margin: 5vh 1vh ;
-}
-.steelseries__img{
-    margin: 5vh 1vh ;
-}
-.hator__img{
-    margin: 5vh 1vh ;
-}
-.dxracer__img{
-    margin: 5vh 1vh ;
-}
-.glorious__img{
-    margin: 5vh 1vh ;
-}
-.logitech__img{
-    margin: 5vh 1vh ;
+li{
+    display: inline-block;
 }
