--- a/style.css
+++ b/style.css
@@ -502,4 +502,415 @@ body, .elem1__text > p, .description__square > p {
   font-weight: 400;
   font-size: 15px;
   color: #55585c;
+}
+
+.HU-2-1 .HU-2-1__container {
+  padding: 2.6rem 9.7rem;
+  display: flex;
+  justify-content: space-between;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item1 {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item1 .HU-2-1__logoText {
+  padding-left: 1rem;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item1 .HU-2-1__logoText .HU-2-1__logoText1 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
+  color: #0897AB;
+  margin: 0;
+  text-transform: uppercase;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item1 .HU-2-1__logoText .HU-2-1__logoText2 {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
+  color: #FFFFFF;
+  margin: 0;
+  text-transform: uppercase;
+  padding-left: 3rem;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item2 {
+  display: flex;
+  align-items: center;
+  gap: 5.3rem;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item2 .HU-2-1__searchContainer {
+  background: url(./img/HU-2-1/magnifier.svg) 2.9rem 1.8rem no-repeat;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item2 .HU-2-1__searchContainer .HU-2-1__search {
+  padding: 1.5rem 8rem 1.5rem 6.5rem;
+  font-family: "Doppio One";
+  font-weight: 400;
+  font-size: 1.6rem;
+  color: white;
+  background: rgba(40, 40, 52, 0.01);
+  border: 0.2rem solid #FAFAFA;
+  box-shadow: 3.8rem rgba(0, 0, 0, 0.52);
+  border-radius: 7.5rem;
+  outline: none;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item2 .HU-2-1__sortContainer {
+  background-color: #009ED6;
+  padding: 2rem;
+  border-radius: 5rem;
+}
+.HU-2-1 .HU-2-1__container .HU-2-1__item2 .HU-2-1__bin {
+  text-align: center;
+  position: relative;
+}
+
+.HU-2 {
+  background: linear-gradient(112deg, rgb(26, 28, 75) 16.68%, rgb(8, 151, 171) 96.66%);
+  border: 1px solid rgba(26, 28, 75, 0);
+}
+
+.HU-2-4__carpetwrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 15.5rem;
+  margin-left: 15.5rem;
+  margin-bottom: 8rem;
+}
+
+.HU-2-4__carpets {
+  margin-top: 5.5rem;
+  width: 47rem;
+  padding: 6.5rem 2.2rem 6.5rem;
+  box-shadow: 0 0 1.5rem 0.5rem rgba(0, 0, 0, 0.2509803922);
+}
+
+.HU-2-4__h2 {
+  font-weight: 400;
+  font-family: "Doppio One";
+  color: white;
+  font-size: 3.6rem;
+  line-height: 4.5rem;
+  width: 42rem;
+  margin: 0 1.2rem;
+}
+
+.HU-2-4__starting {
+  font-weight: 400;
+  font-family: "Doppio One";
+  color: white;
+  font-size: 3.2rem;
+  line-height: 4rem;
+  display: flex;
+  justify-content: space-between;
+  width: 38rem;
+}
+
+.HU-2-4__starting span {
+  color: #0897AB;
+  text-align: right;
+}
+
+.HU-2-4__carpets img {
+  width: 36.8rem;
+  margin-left: 2rem;
+  margin-top: 5rem;
+  margin-bottom: 9rem;
+}
+
+.HU-2-4__lorem {
+  font-weight: 400;
+  font-family: "Doppio One";
+  color: rgba(255, 255, 255, 0.33);
+  font-size: 2rem;
+  line-height: 2.5rem;
+}
+
+.HU-2-4__buy {
+  font-family: "Dhurjati";
+  font-weight: 400;
+  font-size: 3.6rem;
+  line-height: 6.6rem;
+  color: white;
+  border-bottom: solid 0.1rem white;
+  text-decoration: none;
+}
+
+.HU-2-2 {
+  display: flex;
+  justify-content: center;
+  height: 16rem;
+  margin: 2.2rem auto 0;
+}
+
+.HU-2-2__ul {
+  list-style: none;
+  padding: 0;
+  font-family: "Quicksand";
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 1.75rem;
+  width: 17rem;
+  margin-right: 2.4rem;
+}
+
+.HU-2-2__ul label {
+  margin: 0 0 1rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.21);
+}
+
+.li__first {
+  justify-content: space-between;
+  display: flex;
+  font-size: 2rem;
+  line-height: 2.5rem;
+  color: white;
+}
+
+.li__first img {
+  height: 2.5rem;
+  width: 1.5rem;
+  vertical-align: sub;
+}
+
+.li__active, .li__unactive {
+  display: flex;
+  width: 85%;
+  justify-content: space-between;
+}
+
+.li__active label, .li__unactive label {
+  width: 11rem;
+}
+
+.li__active {
+  color: white;
+}
+
+.li__unactive {
+  color: rgba(255, 255, 255, 0.21);
+}
+
+.check__unactive {
+  background-color: rgba(255, 255, 255, 0.21);
+  width: 1.7rem;
+  height: 1.7rem;
+  border-radius: 0.3rem;
+}
+
+.check__img {
+  text-align: center;
+  width: 1.3rem;
+}
+
+.HU-2-2__color {
+  display: inline-block;
+  list-style: none;
+  padding: 0;
+  font-family: "Quicksand";
+  font-weight: 700;
+  font-size: 1.4rem;
+  line-height: 1.75rem;
+  margin-right: 2.4rem;
+  width: 7rem;
+}
+
+.HU-2-2__color label {
+  margin: 0 0 1rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.21);
+}
+
+.color__first {
+  justify-content: space-between;
+  display: flex;
+  font-size: 2rem;
+  line-height: 2.5rem;
+  color: white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.21);
+}
+
+.color__first label {
+  border-bottom: none !important;
+  margin: 0;
+}
+
+.color__activ {
+  display: flex;
+  justify-content: space-between;
+  color: white;
+}
+
+.color__unactiv {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  color: rgba(255, 255, 255, 0.21);
+}
+
+.color__activ label, .color__unactiv label {
+  width: 4rem;
+}
+
+.color__first img {
+  height: 2.5rem;
+  width: 1.5rem;
+  vertical-align: sub;
+}
+
+.form-check-input {
+  width: 1.7rem !important;
+  height: 1.7rem !important;
+  margin-top: 0;
+}
+
+.color__first p {
+  margin: 0;
+}
+
+.li__first p {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.21);
+}
+
+.bottom label {
+  border-bottom: none !important;
+}
+
+.goods__123 {
+  width: 80vw;
+  margin: 0 auto;
+  margin-bottom: 80px;
+}
+
+.HU-2-4 {
+  height: 60rem;
+}
+
+.HU-2-5 {
+  display: flex;
+  box-shadow: 1rem 1rem 1.5rem 1rem rgba(0, 0, 0, 0.15), -1rem -1rem 1.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+.HU-2-5__img {
+  display: flex;
+}
+.HU-2-5__img img {
+  width: 90%;
+  padding: 6rem 7rem 6rem 3.4rem;
+}
+.HU-2-5__rightpanel {
+  width: 50%;
+  margin-right: 3%;
+}
+.HU-2-5__rightpanel h2 {
+  font-family: "Doppio One", sans-serif;
+  font-size: 3.6rem;
+  font-weight: normal;
+  color: white;
+  font-weight: 400;
+  margin-top: 7rem;
+  margin-bottom: 5rem;
+}
+.HU-2-5__rightpanel h3 {
+  font-family: "Doppio One";
+  font-size: 3.2rem;
+  line-height: 4rem;
+  color: white;
+  font-weight: normal;
+}
+.HU-2-5__rightpanel p {
+  font-family: "Doppio One";
+  font-size: 2rem;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.57);
+  width: 90%;
+}
+.HU-2-5__rightpanel span {
+  font-family: "Doppio One";
+  color: #0897AB;
+  font-size: 4rem;
+}
+
+.HU-2-5 .rightpanel__link {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 7rem;
+}
+.HU-2-5 .rightpanel__link a {
+  font-family: "Dhurjati";
+  font-weight: 400;
+  color: white;
+  font-size: 3rem;
+  line-height: 6.7rem;
+  display: inline-block;
+  margin: 0;
+  text-decoration: none;
+  border-bottom: 1px solid white;
+  width: 10rem;
+}
+
+.HU-2-6 {
+  background-color: #000;
+  color: #fff;
+  background-image: url(./img/HU-2-6/backgroundform.svg);
+  background-position: bottom left;
+  background-repeat: no-repeat;
+  background-size: 500px;
+  line-height: 2.5rem;
+  padding: 50px 30px;
+  display: flex;
+  flex-flow: column;
+  text-align: start;
+  font-family: "Doppio One";
+  font-weight: 400;
+}
+.HU-2-6 ul {
+  list-style: none;
+  padding: 0;
+}
+.HU-2-6 h3 {
+  color: #FFFFFF;
+}
+.HU-2-6 a {
+  text-decoration: none;
+  color: #CFCFCF;
+  font-size: 1.2rem;
+}
+.HU-2-6__footer-flex {
+  display: flex;
+  justify-content: space-around;
+}
+.HU-2-6__copyright {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  display: flex;
+  justify-content: space-between;
+  color: #505050;
+}
+.HU-2-6__copyright a {
+  color: #505050;
+}
+.HU-2-6__line {
+  border: solid 1px #505050;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  width: 100%;
+  margin: 30px 0;
+}
+
+.HU-2-6__footer-flex > div {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.link__img {
+  list-style-type: none;
+  padding: 5.5rem 3.6rem;
+}
+.link__img ul {
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.link__img ul li {
+  display: inline-block;
 }/*# sourceMappingURL=style.css.map */
