--- a/style.css
+++ b/style.css
@@ -677,3 +677,117 @@ body {
 .bottom label{
   border-bottom: none !important;
 }
+.HU-3-1{
+  padding: 4.8rem 9.8rem 7rem;
+  background-color: black;
+  z-index: -2;
+}
+.HU-3-1 nav{
+  display: flex;
+  justify-content: space-between;
+  height: 5rem;
+}
+.HU-3-1 nav a{
+  z-index: 2;
+}
+.HU-3-1__hover{
+  position: absolute;
+  right: 2rem;
+}
+.product__img{
+  display: inline-block;
+}
+.product__img img{
+  margin-right: 0;
+  width: 51.2rem;
+}
+.HU-3-1__product{
+  margin-top: 8.8rem;
+  display: flex;
+}
+.img__small{
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
+}
+.img__small img{
+  width: 11.7rem;
+}
+.product__description{
+  margin-left: 5.6rem;
+}
+.HU-3-1__h2{
+  font-family: "Doppio One";
+  font-size: 3.6rem;
+  line-height: 4.5rem;
+  color: white;
+  font-weight: 400;
+  margin: 0;
+  z-index: 3;
+}
+.HU-3-1__price{
+  font-family: "Doppio One";
+  font-size: 3.6rem;
+  line-height: 4.5rem;
+  color: #0897AB;
+  font-weight: 400;
+  margin: 0;
+  margin-top: 1.8rem;
+}
+.product__description ul{
+  font-family: "Quicksand";
+  font-weight: 700;
+  font-size: 1.6rem;
+  color: white;
+  list-style: none;
+  padding: 0;
+  margin-top: 5.3rem;
+  margin-bottom: 0;
+}
+.description__bottom{
+  display: flex;
+  justify-content: space-between;
+}
+.description__bottom a{
+  display: inline-block;
+  margin-top: 6.7rem;
+  width: 23.1rem;
+  height: 6.8rem;
+  clip-path: polygon(0 84%, 0 0, 96% 0, 100% 16%, 100% 100%, 4% 100%);
+  background-color: #0897AB;
+  text-decoration: none;
+  color: white;
+  line-height: 6.8rem;
+  text-align: center;
+  font-family: "Dhurjati";
+  font-weight: 400;
+  font-size: 3.6rem;
+
+}
+.bottom__rating{
+  font-family: "Quicksand";
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.5rem;
+  color: white;
+  margin: 0 0 1rem;
+}
+.bottom__stars{
+  display: flex;
+}
+.bottom__star{
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  background-color: #0897AB;
+  width: 4.2rem;
+  height: 4.2rem;
+}
+.bottom__reviews{
+  display: inline-block;
+  color: white;
+  font-family: "Dhurjati";
+  font-weight: 400;
+  font-size: 3.6rem;
+  line-height: 6.6rem;
+  border-bottom: 0.1rem white solid;
+  margin: 0;
+}
