--- a/style.css
+++ b/style.css
@@ -206,4 +206,77 @@ body, .elem1__text > p, .description__square > p {
 .HU-2-1 .HU-2-1__container .HU-2-1__item2 .HU-2-1__bin {
   text-align: center;
   position: relative;
+}
+
+.HU-3-4 {
+  color: white;
+  background-color: black;
+  padding: 5rem 0 10rem 0;
+  position: relative;
+}
+.HU-3-4__blot {
+  position: absolute;
+  z-index: 0;
+  right: 33rem;
+  width: 16.5rem;
+  height: 12.2rem;
+}
+.HU-3-4__title {
+  position: relative;
+  z-index: 1;
+}
+.HU-3-4__title h1 {
+  margin: 0 auto;
+  text-align: center;
+  border-top: 0.2rem solid #0897AB;
+  width: 90vw;
+  font-family: "Quicksand";
+  font-weight: 700;
+  font-size: 3.2rem;
+  padding-top: 2.5;
+}
+.HU-3-4 .feedback {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: space-evenly;
+  padding-left: 75px;
+  padding-top: 7.5rem;
+}
+.HU-3-4 .feedback__block1 {
+  width: 30rem;
+}
+.HU-3-4 .feedback__block2 {
+  width: 30rem;
+}
+.HU-3-4 .feedback__block3 {
+  width: 30rem;
+}
+.HU-3-4 img {
+  width: 30%;
+}
+.HU-3-4 .feedback__name {
+  margin: 0;
+  font-family: Doppio One;
+  font-size: 3rem;
+  font-weight: normal;
+}
+.HU-3-4 .feedback__date {
+  margin: 0;
+  font-family: Doppio One;
+  font-size: 1.5rem;
+  font-weight: normal;
+}
+.HU-3-4 .feedback__comment {
+  margin: 0;
+  font-family: Doppio One;
+  font-size: 2rem;
+  font-weight: normal;
+  padding-bottom: 2rem;
+}
+.HU-3-4 .feedback__adv {
+  margin: 0;
+  font-family: Doppio One;
+  font-size: 2rem;
+  font-weight: normal;
 }/*# sourceMappingURL=style.css.map */
