--- a/style.scss
+++ b/style.scss
@@ -219,3 +219,76 @@ body, .elem1__text > p, .description__square > p{
       }
   }
 }
+
+.HU-3-4{
+    color: white;
+    background-color: black;
+    padding: 5rem 0 10rem 0;
+    position: relative;
+    &__blot{
+        position: absolute;
+        z-index: 0;
+        right: 33rem;
+        width: 16.5rem;
+        height: 12.2rem;
+    }
+    &__title{
+        position: relative;
+        z-index: 1;
+        h1{
+            margin: 0 auto;
+            text-align: center;
+            border-top: 0.2rem solid #0897AB;
+            width: 90vw;
+            font-family: 'Quicksand';
+            font-weight: 700;
+            font-size: 3.2rem;
+            padding-top: 2.5;
+        }
+    }
+    .feedback{
+        position: relative;
+        z-index: 1;
+        display: flex;
+        justify-content: space-evenly;
+        padding-left: 75px;
+        padding-top: 7.5rem;
+        &__block1{
+            width: 30rem;
+        }
+        &__block2{
+            width: 30rem;
+        }
+        &__block3{
+            width: 30rem;
+        }
+    }
+    img{
+        width: 30%;
+    }
+    .feedback__name{
+        margin: 0;
+        font-family: Doppio One;
+        font-size: 3rem;
+        font-weight: normal;
+    }
+    .feedback__date{
+        margin: 0;
+        font-family: Doppio One;
+        font-size: 1.5rem;
+        font-weight: normal;
+    }
+    .feedback__comment{
+        margin: 0;
+        font-family: Doppio One;
+        font-size: 2rem;
+        font-weight: normal;
+        padding-bottom: 2rem;
+    }
+    .feedback__adv{
+        margin: 0;
+        font-family: Doppio One;
+        font-size: 2rem;
+        font-weight: normal;
+    }
+}
