--- a/style.css
+++ b/style.css
@@ -690,10 +690,6 @@ body {
 .HU-3-1 nav a{
   z-index: 2;
 }
-.HU-3-1__hover{
-  position: absolute;
-  right: 2rem;
-}
 .product__img{
   display: inline-block;
 }
@@ -742,6 +738,7 @@ body {
   list-style: none;
   padding: 0;
   margin-top: 5.3rem;
+  letter-spacing: 0.065em;
   margin-bottom: 0;
 }
 .description__bottom{
