--- a/style.scss
+++ b/style.scss
@@ -224,17 +224,7 @@ body, .elem1__text > p, .description__square > p{
     color: white;
     background-color: black;
     padding: 5rem 0 10rem 0;
-    position: relative;
-    &__blot{
-        position: absolute;
-        z-index: 0;
-        right: 33rem;
-        width: 16.5rem;
-        height: 12.2rem;
-    }
     &__title{
-        position: relative;
-        z-index: 1;
         h1{
             margin: 0 auto;
             text-align: center;
@@ -243,12 +233,11 @@ body, .elem1__text > p, .description__square > p{
             font-family: 'Quicksand';
             font-weight: 700;
             font-size: 3.2rem;
-            padding-top: 2.5;
+            padding-top: 2.5rem;
+            letter-spacing: 0.065em;
         }
     }
     .feedback{
-        position: relative;
-        z-index: 1;
         display: flex;
         justify-content: space-evenly;
         padding-left: 75px;
