--- a/style.css
+++ b/style.css
@@ -581,4 +581,47 @@ body, .elem1__text > p, .description__square > p {
   position: absolute;
   left: 0;
   bottom: 0;
+}
+
+.whapper1 {
+  margin: 0;
+  padding: 0;
+  background-color: #000;
+}
+
+.HU-3-2 {
+  height: 400px;
+}
+
+.HU-3-3 {
+  font-family: "Doppio One", sans-serif;
+  font-size: 2rem;
+  padding: 5rem 0 10rem 0;
+  background-color: #000;
+  color: white;
+  height: auto;
+}
+.HU-3-3 h2 {
+  font-family: "Quicksand";
+  text-transform: uppercase;
+  margin: 0 auto;
+  text-align: center;
+  border-top: 0.2rem solid #0897AB;
+  width: 90vw;
+  font-weight: 600;
+  font-size: 3.6rem;
+  padding-top: 2.5rem;
+  letter-spacing: 0.065em;
+}
+.HU-3-3__lists {
+  margin-top: 5rem;
+  display: flex;
+  justify-content: space-around;
+}
+.HU-3-3__lists ul {
+  list-style: none;
+}
+.HU-3-3__lists li {
+  line-height: 5rem;
+  font-weight: 300;
 }/*# sourceMappingURL=style.css.map */
