--- a/style.scss
+++ b/style.scss
@@ -577,3 +577,45 @@ a {
     bottom: 0;
     }
 }
+//index3.html
+.whapper1{
+  margin: 0;
+  padding: 0;
+  background-color: #000;
+}
+.HU-3-2{
+  height: 400px;
+}
+.HU-3-3{
+  font-family: 'Doppio One', sans-serif;
+  font-size: 2rem;
+  padding: 5rem 0 10rem 0;  
+  background-color: #000;
+  color: white;
+  height: auto;
+    h2{
+      font-family: 'Quicksand';
+      text-transform: uppercase;
+      margin: 0 auto;
+      text-align: center;
+      border-top: 0.2rem  solid #0897AB;
+      width: 90vw;
+      font-weight: 600;
+      font-size: 3.6rem;
+      padding-top: 2.5rem;
+      letter-spacing: 0.065em;
+    }
+  &__lists{
+    margin-top: 5rem;
+display:flex;
+justify-content: space-around;
+ul{
+  list-style: none;
+}  
+li{
+  line-height: 5rem;
+  font-weight: 300;
+}
+}
+  
+}
