--- a/style.css
+++ b/style.css
@@ -183,4 +183,26 @@ body {
 .HU-2-6__footer-flex > div {
   width: -moz-fit-content;
   width: fit-content;
+}
+
+.HU-3-2 {
+  padding-left: 30px;
+  padding-right: 30px;
+  background-color: #1E1E1E;
+  font-family: "Doppio One";
+  color: #FDFDFD;
+}
+.HU-3-2 h2 {
+  font-size: 2rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+.HU-3-2 hr {
+  border: solid 1px #0897AB;
+}
+.HU-3-2__desc {
+  font-weight: 400;
+  font-size: 1.5rem;
+  padding: 30px 0;
+  line-height: 25px;
 }/*# sourceMappingURL=style.css.map */
