--- a/style.scss
+++ b/style.scss
@@ -186,3 +186,24 @@ a{
 .HU-2-6__footer-flex>div{
     width: fit-content;
 }
+.HU-3-2{
+    padding-left: 30px;
+    padding-right: 30px;
+    background-color:#1E1E1E;
+    font-family: 'Doppio One';
+    color: #FDFDFD;
+    h2{
+        font-size: 2rem;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    hr{
+        border: solid 1px #0897AB;
+    }
+    &__desc{
+        font-weight: 400;
+        font-size: 1.5rem;
+        padding: 30px 0;
+        line-height: 25px;
+    }
+}
