--- a/style.scss
+++ b/style.scss
@@ -187,7 +187,7 @@ a{
     width: fit-content;
 }
 .HU-3-2{
-    padding:30px
+    padding:30px;
     background-color:#1E1E1E;
     font-family: 'Doppio One';
     color: #FDFDFD;
