--- a/style.css
+++ b/style.css
@@ -186,9 +186,8 @@ body {
 }
 
 .HU-3-2 {
-  padding-left: 30px;
-  padding-right: 30px;
-  background-color: #1E1E1E;
+  padding: 2rem;
+  background-color: #000;
   font-family: "Doppio One";
   color: #FDFDFD;
 }
@@ -203,6 +202,6 @@ body {
 .HU-3-2__desc {
   font-weight: 400;
   font-size: 1.5rem;
-  padding: 30px 0;
-  line-height: 25px;
+  padding: 2rem;
+  line-height: 2.5rem;
 }/*# sourceMappingURL=style.css.map */
