--- a/style.scss
+++ b/style.scss
@@ -187,8 +187,8 @@ a{
     width: fit-content;
 }
 .HU-3-2{
-    padding:30px
-    background-color:#1E1E1E;
+    padding:2rem;
+    background-color:#000;
     font-family: 'Doppio One';
     color: #FDFDFD;
     h2{
@@ -202,7 +202,7 @@ a{
     &__desc{
         font-weight: 400;
         font-size: 1.5rem;
-        padding: 30px 0;
-        line-height: 25px;
+        padding: 2rem;
+        line-height: 2.5rem;
     }
 }
