--- a/style.scss
+++ b/style.scss
@@ -197,7 +197,7 @@ a{
         text-transform: uppercase;
     }
     hr{
-        border: solid 1px #0897AB;
+        border: solid 0.1rem #0897AB;
     }
     &__desc{
         font-weight: 400;
