--- a/style.scss
+++ b/style.scss
@@ -191,7 +191,8 @@ a{
     font-family: 'Doppio One';
     color: #FDFDFD;
     h2{
-        font-size: 2rem;
+        font-size: 3.2rem;
+        letter-spacing: 0.145rem;
         text-align: center;
         font-family: 'Quicksand';
         text-transform: uppercase;
