--- a/style.scss
+++ b/style.scss
@@ -872,3 +872,282 @@ a {
     }
   }
 }
+
+.HU-3-1{
+  padding: 4.8rem 9.8rem 7rem;
+  background-color: black;
+  z-index: -2;
+}
+.HU-3-1 nav{
+  display: flex;
+  justify-content: space-between;
+  height: 5rem;
+}
+.HU-3-1 nav a{
+  z-index: 2;
+}
+.product__img{
+  display: inline-block;
+}
+.product__img img{
+  margin-right: 0;
+  width: 51.2rem;
+}
+.HU-3-1__product{
+  margin-top: 8.8rem;
+  display: flex;
+}
+.img__small{
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
+}
+.img__small img{
+  width: 11.7rem;
+}
+.product__description{
+  margin-left: 5.6rem;
+}
+.HU-3-1__h2{
+  font-family: "Doppio One";
+  font-size: 3.6rem;
+  line-height: 4.5rem;
+  color: white;
+  font-weight: 400;
+  margin: 0;
+  z-index: 3;
+}
+.HU-3-1__price{
+  font-family: "Doppio One";
+  font-size: 3.6rem;
+  line-height: 4.5rem;
+  color: #0897AB;
+  font-weight: 400;
+  margin: 0;
+  margin-top: 1.8rem;
+}
+.product__description ul{
+  font-family: "Quicksand";
+  font-weight: 700;
+  font-size: 1.6rem;
+  color: white;
+  list-style: none;
+  padding: 0;
+  margin-top: 5.3rem;
+  letter-spacing: 0.065em;
+  margin-bottom: 0;
+}
+.description__bottom{
+  display: flex;
+  justify-content: space-between;
+}
+.description__bottom a{
+  display: inline-block;
+  margin-top: 6.7rem;
+  width: 23.1rem;
+  height: 6.8rem;
+  clip-path: polygon(0 84%, 0 0, 96% 0, 100% 16%, 100% 100%, 4% 100%);
+  background-color: #0897AB;
+  text-decoration: none;
+  color: white;
+  line-height: 6.8rem;
+  text-align: center;
+  font-family: "Dhurjati";
+  font-weight: 400;
+  font-size: 3.6rem;
+
+}
+.bottom__rating{
+  font-family: "Quicksand";
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.5rem;
+  color: white;
+  margin: 0 0 1rem;
+}
+.bottom__stars{
+  display: flex;
+}
+.bottom__star{
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  background-color: #0897AB;
+  width: 4.2rem;
+  height: 4.2rem;
+}
+.bottom__reviews{
+  display: inline-block;
+  color: white;
+  font-family: "Dhurjati";
+  font-weight: 400;
+  font-size: 3.6rem;
+  line-height: 6.6rem;
+  border-bottom: 0.1rem white solid;
+  margin: 0;
+}
+
+.HU-3-2{
+  padding:2rem;
+  background-color:#000;
+  font-family: 'Doppio One';
+  color: #FDFDFD;
+  h2{
+      font-size: 3.2rem;
+      letter-spacing: 0.145rem;
+      text-align: center;
+      font-family: 'Quicksand';
+      text-transform: uppercase;
+  }
+  hr{
+      border: solid 0.1rem #0897AB;
+      width: 80vw;
+  }
+  &__desc{
+      font-weight: 400;
+      font-size: 1.5rem;
+      line-height: 2.5rem;
+      padding: 2rem 15rem;
+  }
+}
+.HU-3-3{
+  font-family: 'Doppio One', sans-serif;
+  font-size: 2rem;
+  padding: 5rem 0;  
+  background-color: #000;
+  color: white;
+  height: auto;
+    h2{
+      font-family: 'Quicksand';
+      text-transform: uppercase;
+      margin: 0 auto;
+      text-align: center;
+      border-top: 0.2rem  solid #0897AB;
+      width: 80vw;
+      font-weight: 600;
+      font-size: 3.2rem;
+      padding-top: 2.5rem;
+      letter-spacing: 0.065em;
+    }
+  &__lists{
+      margin-top: 5rem;
+      display:flex;
+      justify-content: space-around;
+      ul{
+          list-style: none;
+          padding: 0;
+          margin-right: 5rem;
+      }  
+      li{
+          line-height: 5rem;
+          font-weight: 300;
+      }
+  } 
+}
+
+.HU-3-4{
+  color: white;
+  background-color: black;
+  padding: 5rem 0 10rem 0;
+  &__title{
+      h2{
+          margin: 0 auto;
+          text-align: center;
+          border-top: 0.2rem solid #0897AB;
+          width: 80vw;
+          font-family: 'Quicksand';
+          font-weight: 700;
+          font-size: 3.2rem;
+          padding-top: 2.5rem;
+          letter-spacing: 0.065em;
+      }
+  }
+  .feedback{
+      display: flex;
+      justify-content: space-evenly;
+      padding-left: 7.5rem;
+      padding-top: 7.5rem;
+      &__block1{
+          width: 30rem;
+      }
+      &__block2{
+          width: 30rem;
+      }
+      &__block3{
+          width: 30rem;
+      }
+  }
+  img{
+      width: 30%;
+  }
+  .feedback__name{
+      margin: 0;
+      font-family: Doppio One;
+      font-size: 3rem;
+      font-weight: normal;
+  }
+  .feedback__date{
+      margin: 0;
+      font-family: Doppio One;
+      font-size: 1.5rem;
+      font-weight: normal;
+  }
+  .feedback__comment{
+      margin: 0;
+      font-family: Doppio One;
+      font-size: 2rem;
+      font-weight: normal;
+      padding-bottom: 2rem;
+  }
+  .feedback__adv{
+      margin: 0;
+      font-family: Doppio One;
+      font-size: 2rem;
+      font-weight: normal;
+  }
+}
+
+.HU-3-5{
+  padding-top: 3rem;
+  background: black;
+  .HU-3-5__lists{
+    width: 80vw;
+    border-top: 0.2rem solid #0897AB;
+    padding-top: 2.5rem;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 1.5rem;
+    .HU-3-5__list{
+      font-family: 'Doppio One';
+      font-weight: 400;
+      font-size: 1.5rem;
+      line-height: 237.5%;
+      color: #9d9d9d;
+      ul{
+        padding: 0;
+        list-style: none;
+        li:first-child{
+          color: white;
+        }
+      }
+    }
+  }
+  .HU-3-5__bottom{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 7.5rem;
+    border-top: 0.1rem solid #55585c;
+    padding: 1rem 0;
+    .HU-3-5__copyright{
+      font-family: 'Doppio One';
+      font-weight: 400;
+      font-size: 1.5rem;
+      color: #55585c;
+    }
+    .HU-3-5__policy{
+      font-family: 'Doppio One';
+      font-weight: 400;
+      font-size: 1.5rem;
+      color: #55585c;
+    }
+  }
+}
