--- a/style.css
+++ b/style.css
@@ -481,6 +481,10 @@ body, .elem1__text > p, .description__square > p {
 .footer .footer__lists .footer__list ul {
   list-style: none;
 }
+.footer .footer__lists .footer__list ul a {
+  color: #9d9d9d;
+  text-decoration: none;
+}
 .footer .footer__lists .footer__list ul li:first-child {
   color: white;
 }
@@ -1188,7 +1192,14 @@ body, .elem1__text > p, .description__square > p {
   padding: 0;
   list-style: none;
 }
+.HU-3-5 .HU-3-5__lists .HU-3-5__list ul a {
+  text-decoration: none;
+  color: #9d9d9d;
+}
 .HU-3-5 .HU-3-5__lists .HU-3-5__list ul li:first-child {
+  color: white;
+}
+.HU-3-5 .HU-3-5__lists .HU-3-5__list ul li:first-child a {
   color: white;
 }
 .HU-3-5 .HU-3-5__bottom {
