--- a/style.scss
+++ b/style.scss
@@ -474,6 +474,10 @@ body, .elem1__text > p, .description__square > p{
       color: #9d9d9d;
       ul{
         list-style: none;
+        a{
+          color: #9d9d9d;
+          text-decoration: none;
+        }
         li:first-child{
           color: white;
         }
@@ -1125,8 +1129,15 @@ a {
       ul{
         padding: 0;
         list-style: none;
+        a{
+          text-decoration: none;
+          color: #9d9d9d;
+        }
         li:first-child{
           color: white;
+          a{
+            color: white;
+          }
         }
       }
     }
