--- a/style.css
+++ b/style.css
@@ -495,6 +495,10 @@ body, .elem1__text > p, .description__square > p {
   border-top: 1px solid #55585c;
   padding: 10px 0;
 }
+.footer .footer__bottom a {
+  text-decoration: none;
+  color: #55585c;
+}
 .footer .footer__bottom .footer__copyright {
   font-family: "Doppio One";
   font-weight: 400;
@@ -1208,6 +1212,10 @@ body, .elem1__text > p, .description__square > p {
   margin: 0 7.5rem;
   border-top: 0.1rem solid #55585c;
   padding: 1rem 0;
+}
+.HU-3-5 .HU-3-5__bottom a {
+  text-decoration: none;
+  color: #55585c;
 }
 .HU-3-5 .HU-3-5__bottom .HU-3-5__copyright {
   font-family: "Doppio One";
